agenttest + some other issues